2012-02-03  Nenad Vukicevic  <nenad@intrepid.com>

	* Make-lang.in: Various changes related to generating
	man/info pages from texi source file. 
	(upc.install-common): Fix for removing the upc command
	link before install if suffix was applied.
	(upc.install-pdf): New.
	(upc.install-html): Change for the build from texi.
	(upc.install-man): Change for the build from texi.
	* gupc.1: Removed.
	* gupc.texi: New. Created texi source for man/info
	generation.

2012-01-30  Nenad Vukicevic  <nenad@intrepid.com>

	* Make-lang.in: Fix the --program-suffix configuration
	option.  GUPC executables are now installed with appropriate
	suffixes and GUPC driver execs 'gcc' with the right suffix.

2012-01-24  Nenad Vukicevic  <nenad@intrepid.com>

	* upc-lang.c (upc_init_options): Disable section anchors
	for UPC language.

2012-01-14  Gary Funck  <gary@intrepid.com>

	* upc-genericize.c (upc_genericize_expr): Update input_location
	while traversing the program tree.
	(upc_expand_get, upc_expand_put): For profiling,  derive
	the source code location from the incoming 'loc' parameter.

2012-01-09  Gary Funck  <gary@intrepid.com>

	* upc-genericize.c (upc_expand_put): Use is_gimple_reg instead of
	is_gimple_non_addressable.

2012-01-06  Nenad Vukicevic <nenad@intrepid.com>

	* Make-lang.in: Add appropriate linker flags when linking
	gupc drivers.

2012-01-06  Nenad Vukicevic <nenad@intrepid.com>

	* Make-lang.in: Add appropriate linker flags when linking
	gupc drivers.

2011-12-31  Gary Funck  <gary@intrepid.com>

	Fix gupc driver to avoid segfault when processing
	invalid use of a switch that expects an argument.
	* gupc.c (get_libgupc_path): Add check for non-NULL value of
	libgupc_archive before attempting to access libgupc_archive[0].
	(main): Do not issue error if lib_dir is NULL.  Instead, only
	process lib_dir if it is non-NULL.

2011-12-31  Gary Funck  <gary@intrepid.com>

	Improve -fupc-debug support.
	* upc-genericize.c (upc_expand_get, upc_expand_put,