@@ -1,3 +1,13 @@
+2012-02-03  Nenad Vukicevic  <nenad@intrepid.com>
+
+	* c-family/c-pragma.c (disable_pupc_mode): New. Disable profiling
+	code generation (same as #pragma pupc off).
+	(set_pucp_mode): New. Set/restore profiling mode.
+	* c-family/c-upc.h (disable_pupc_mode): New. Prototype.
+	(set_pucp_mode): New. Prototype.
+	* upc/upc-act.c (upc_write_init_func): Disable emitting of the
+	profiling code for shared variables initialization routines. 
+
 2012-01-31  Gary Funck  <gary@intrepid.com>
 
 	Merge trunk version 183751 into gupc branch.
