@@ -1,5 +1,15 @@
 2012-02-03  Nenad Vukicevic  <nenad@intrepid.com>
 
+	* ../c-family/c-pragma.c (disable_pupc_mode): New. Disable profiling
+	code generation (same as #pragma pupc off).
+	(set_pucp_mode): New. Set/restore profiling mode.
+	* ../c-family/c-upc.h (disable_pupc_mode): New. Prototype.
+	(set_pucp_mode): New. Prototype.
+	* upc-act.c (upc_write_init_func): Disable emitting of the
+	profiling code for shared variables initialization routines. 
+
+2012-02-03  Nenad Vukicevic  <nenad@intrepid.com>
+
 	* Make-lang.in: Various changes related to generating
 	man/info pages from texi source file. 
 	(upc.install-common): Fix for removing the upc command
